--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LyndenFlood_COMP304Lab1_Ex1"
         tools:targetApi="31">
+        <activity android:name=".AddTaskActivity" />
+        <activity android:name=".ViewEditTaskActivity" />
+
         <activity
             android:name=".MainActivity"
             android:exported="true"
