--- a/LyndenFlood_COMP304_Lab2_Ex1/app/src/main/AndroidManifest.xml
+++ b/LyndenFlood_COMP304_Lab2_Ex1/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
+        android:name=".MyApp"
         android:theme="@style/Theme.LyndenFlood_COMP304_Lab2_Ex1"
         tools:targetApi="31">
         <activity
