--- a/LyndenFlood_COMP304_Lab2_Ex1/gradle/libs.versions.toml
+++ b/LyndenFlood_COMP304_Lab2_Ex1/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 agp = "8.10.0"
+androidxMaterial3WindowSizeClass = "1.1.2"
 hiltAndroid = "2.50"
 hiltNavigationCompose = "1.2.0"
 koinAndroid = "3.5.0"
@@ -15,6 +16,7 @@ composeBom = "2024.09.00"
 material3WindowSizeClass = "1.3.2"
 material3WindowSizeClassVersion = "1.2.0"
 navigationCompose = "2.9.0"
+navigationComposeVersion = "2.7.5"
 runtimeLivedata = "1.8.2"
 
 [libraries]
@@ -23,8 +25,10 @@ androidx-hilt-navigation-compose = { module = "androidx.hilt:hilt-navigation-com
 androidx-lifecycle-livedata-ktx = { module = "androidx.lifecycle:lifecycle-livedata-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-lifecycle-viewmodel-compose = { module = "androidx.lifecycle:lifecycle-viewmodel-compose", version.ref = "lifecycleRuntimeKtx" }
 androidx-material3-window-size-class1 = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClass" }
+androidx-material3-window-size-class1-v112 = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "androidxMaterial3WindowSizeClass" }
 androidx-material3-window-size-class1-v120 = { module = "androidx.compose.material3:material3-window-size-class", version.ref = "material3WindowSizeClassVersion" }
 androidx-navigation-compose = { module = "androidx.navigation:navigation-compose", version.ref = "navigationCompose" }
+androidx-navigation-compose-v275 = { module = "androidx.navigation:navigation-compose", version.ref = "navigationComposeVersion" }
 androidx-runtime-livedata = { module = "androidx.compose.runtime:runtime-livedata", version.ref = "runtimeLivedata" }
 hilt-android = { module = "com.google.dagger:hilt-android", version.ref = "hiltAndroid" }
 hilt-android-compiler = { module = "com.google.dagger:hilt-android-compiler", version.ref = "hiltAndroid" }
