--- a/LyndenFlood_COMP304Lab3_Ex1/gradle/libs.versions.toml
+++ b/LyndenFlood_COMP304Lab3_Ex1/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.11.0"
+agp = "8.10.1"  # Changed from 8.11.0
 converterGson = "3.0.0"
 kotlin = "2.0.21"
 coreKtx = "1.16.0"
@@ -42,4 +42,3 @@ retrofit = { module = "com.squareup.retrofit2:retrofit", version.ref = "retrofit
 android-application = { id = "com.android.application", version.ref = "agp" }
 kotlin-android = { id = "org.jetbrains.kotlin.android", version.ref = "kotlin" }
 kotlin-compose = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "kotlin" }
-
