--- a/LyndenFlood_COMP304Sec001_Lab04/app/src/main/AndroidManifest.xml
+++ b/LyndenFlood_COMP304Sec001_Lab04/app/src/main/AndroidManifest.xml
@@ -2,6 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <!-- Location and Internet permissions -->
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -12,6 +17,13 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.LyndenFlood_COMP304Sec001_Lab04"
         tools:targetApi="31">
+
+        <!-- Google Maps API Key -->
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="${MAPS_API_KEY}" />
+
+        <!-- Main Activity -->
         <activity
             android:name=".MainActivity"
             android:exported="true"
@@ -19,10 +31,24 @@
             android:theme="@style/Theme.LyndenFlood_COMP304Sec001_Lab04">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- Second Activity - Items List -->
+        <activity
+            android:name=".LyndenActivity"
+            android:exported="false"
+            android:label="Barcelona Attractions"
+            android:theme="@style/Theme.LyndenFlood_COMP304Sec001_Lab04" />
+
+        <!-- Third Activity - Map Display -->
+        <activity
+            android:name=".MapActivity"
+            android:exported="false"
+            android:label="Location Map"
+            android:theme="@style/Theme.LyndenFlood_COMP304Sec001_Lab04" />
+
     </application>
 
 </manifest>
